--- a/form/com_modules.module.xml
+++ b/form/com_modules.module.xml
@@ -10,7 +10,7 @@
                     type="radio"
                     label="PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_LABEL"
                     description="PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_DESC"
-                    class="btn-group btn-group-yesno"
+                    class="switcher btn-group btn-group-yesno"
                     default="0"
             >
                 <option value="1">JYES</option>
